--- a/MusicApp/app/views/layouts/application.html.erb
+++ b/MusicApp/app/views/layouts/application.html.erb
@@ -10,6 +10,28 @@
   </head>
 
   <body>
+    <h1>THE MUSIC APP</h1>
+
+    <% if logged_in? %>
+      <h1><%= current_user.email %></h1>
+      <form action="<%= session_url %>" method="POST">
+        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Log Out">
+      </form>
+    <% else %>
+      <a href="<%= new_session_url(@user[:id]) %>">Log in</a>
+      <a href="<%= new_user_url(@user[:id]) %>">Sign up</a>
+    <% end %>
+
+    <% if flash[:errors] %>
+      <ul>
+        <% flash[:errors].each do |error| %>
+          <li><%= error %></li>
+        <% end %>
+      </ul>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
